<resources>
    <string name="app_name">Kardia</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth in dd-MM-yyyy</string>
    <string name="first_name_label">First Name :</string>
    <string name="last_name_label">Last name :</string>
    <string name="age">Age :</string>
    <string name="next">Next</string>
</resources>