<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="UserModel"
            type="com.vaibhav.kardia.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            android:text="@string/first_name_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_first_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            android:text="@{UserModel.firstName}"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_first_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Vaibhav" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/last_name_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />

        <TextView
            android:id="@+id/tv_last_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@{UserModel.lastName}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_last_name"
            app:layout_constraintStart_toEndOf="@id/tv_last_name"
            tools:text="Paliwal" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/age"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />

        <TextView
            android:id="@+id/tv_age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_age"
            app:layout_constraintStart_toEndOf="@id/tv_age"
            tools:text="20 Years, 02 Months, 04 Days" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

